--- a/sentier-gauche.html
+++ b/sentier-gauche.html
@@ -8,10 +8,11 @@
 </head>
 <body style="background-image: url('images/welcomeBackground.jpg');">
 <div class="centered-text">
-    <h1>Bienvenue !</h1>
-    <p>Quel est ton nom ?</p>
-    <input type="text" class="styled-input">
-    <button class="btn-grad" id="validerBtn">Valider</button>
+    <h1>CHEMIN DE GAUCHE</h1>
+</div>
+<div class="button-choices">
+    <a href="accueil.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
+    <a href="accueil.html" class="btn-grad" id="droite">Retourner sur vos pas</a>
 </div>
 </body>
 </html>
