+ fin;garde;cabane / pas fini

--- a/accueil.html
+++ b/accueil.html
@@ -11,12 +11,10 @@
     <h1>Très bien,
         <span id="welcomeName"></span>
     </h1>
-    <p>Où souhaitez-vous aller ?</p>
+    <p>Bonne chance et bon courage !</p>
 </div>
 <div class="button-container">
-    <a href="sentier-gauche.html" class="btn-grad" id="gauche"><= Aller à gauche</a>
-    <img src="images/chevalier.png" alt="image du chevalier">
-    <a href="sentier-droite.html" class="btn-grad" id="droite">Aller à droite =></a>
+    <a href="début.html" class="btn-grad" id="gauche">Commencer l'aventure</a>
 </div>
 
 <script>
