--- a/début.html
+++ b/début.html
@@ -7,19 +7,16 @@
     <script src="script.js"></script>
 </head>
 <body style="background-image: url('images/welcomeBackground.jpg');">
-    <h2>Cabane</h2>
+    <h2>Forêt</h2>
 <div class="gameText">
-    <h1>Cela semble être une cabane normale...</h1>
+    <h1>Ou souhaitez vous aller ?</h1>
 </div>
 <div class="image-centre">
-    <img src="images/interieur-cabane.jpg" style="margin-left: 185%; margin-top: 10%;">
-    <a href=# class="overlay">
-        <img src="images/livre.png" alt="Image cliquable" onclick="afficherPopup()">
-    </a>
+    <img src="images/foret-depart.png">
 </div>
-
 <div class="button-choices">
-    <a href="sentier-droite.html" class="btn-grad" id="gauche">Sortir</a>
+    <a href="sentier-gauche.html" class="btn-grad" id="gauche">Sentier de gauche</a>
+    <a href="sentier-droite.html" class="btn-grad" id="droite">Sentier de droite</a>
 </div>
 </body>
 </html>
