--- a/sentier-droite.html
+++ b/sentier-droite.html
@@ -6,13 +6,17 @@
     <title>Castle quest</title>
     <script src="script.js"></script>
 </head>
-<body style="background-image: url('images/cabane.jpg');">
+<body style="background-image: url('images/welcomeBackground.jpg');">
+    <h2>Sentier de droite</h2>
 <div class="gameText">
-    <h2>Après avoir suivi le sentier de droite, vous trouvez une maison</h2>
+    <h1>Une cabane semble se trouver au loin</h1>
+</div>
+<div class="image-centre">
+    <img src="images/cabane.jpg" style="margin-left: 115%; margin-top: 10%;">
 </div>
 <div class="button-choices">
-    <a href="accueil.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-    <a href="cabane.html" class="btn-grad" id="droite">Entrer dans la maison</a>
+    <a href="début.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
+    <a href="cabane.html" class="btn-grad" id="droite">Entrer dans la cabane</a>
 </div>
 </body>
 </html>
