--- a/sentier-gauche.html
+++ b/sentier-gauche.html
@@ -7,12 +7,19 @@
     <script src="script.js"></script>
 </head>
 <body style="background-image: url('images/welcomeBackground.jpg');">
-<div class="centered-text">
-    <h1>CHEMIN DE GAUCHE</h1>
+    <h2>Sentier de gauche</h2>
+<div class="gameText">
+    <h1>Cette porte semble bien gardée</h1>
+</div>
+<div class="image-centre">
+    <img src="images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
+    <a class="overlay" style="left: 1000px;">
+        <img src="images/chevalier.png" style="width: 200px;">
+    </a>
 </div>
 <div class="button-choices">
-    <a href="accueil.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-    <a href="accueil.html" class="btn-grad" id="droite">Retourner sur vos pas</a>
+    <a href="début.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
+    <a href="garde.html" class="btn-grad" id="milieu">Avancer vers le garde</a>
+    <a href="cabane.html" class="btn-grad" id="droite">Continuer d'avancer</a>
 </div>
 </body>
-</html>
