--- a/pages/cabane.html
+++ b/pages/cabane.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
+    <script src="../scripts/script.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body style="background-image: url('../images/welcomeBackground.jpg');">
     <h2>Cabane</h2>
 <div class="gameText">
     <h1>Cela semble être une cabane normale...</h1>
 </div>
 <div class="image-centre">
-    <img src="images/interieur-cabane.jpg" style="margin-left: 185%; margin-top: 10%;">
+    <img src="../images/interieur-cabane.jpg" style="margin-left: 185%; margin-top: 10%;">
     <a href=# class="overlay">
-        <img src="images/livre.png" alt="Image cliquable" onclick="afficherPopup()">
+        <img src="../images/livre.png" alt="Image cliquable" onclick="afficherPopup()">
     </a>
 </div>
 
