--- a/pages/début.html
+++ b/pages/début.html
@@ -2,17 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body style="background-image: url('../images/welcomeBackground.jpg');">
     <h2>Forêt</h2>
 <div class="gameText">
     <h1>Ou souhaitez vous aller ?</h1>
 </div>
 <div class="image-centre">
-    <img src="images/foret-depart.png">
+    <img src="../images/foret-depart.png">
 </div>
 <div class="button-choices">
     <a href="sentier-gauche.html" class="btn-grad" id="gauche">Sentier de gauche</a>
