--- a/pages/garde.html
+++ b/pages/garde.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
+    <script src="../scripts/script.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body style="background-image: url('../images/welcomeBackground.jpg');">
     <h2>Garde</h2>
 <div class="gameText">
     <h1>Un code semble nécessaire</h1>
 </div>
 <div class="code-final">
-    <img src="images/chevalier.png" style="margin-left: 140%; margin-top: 10%;">
+    <img src="../images/chevalier.png" style="margin-left: 140%; margin-top: 10%;">
     <div class="input-container">
         <div id="message" style="color: red;font-family: Bradley Hand, cursive;"></div>
         <input type="text" class="styled-input" id="codeInput">
