--- a/pages/sentier-gauche.html
+++ b/pages/sentier-gauche.html
@@ -2,24 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body style="background-image: url('../images/welcomeBackground.jpg');">
     <h2>Sentier de gauche</h2>
 <div class="gameText">
     <h1>Cette porte semble bien gardée</h1>
 </div>
 <div class="image-centre">
-    <img src="images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
+    <img src="../images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
     <a class="overlay" style="left: 1000px;">
-        <img src="images/chevalier.png" style="width: 200px;">
+        <img src="../images/chevalier.png" style="width: 200px;">
     </a>
 </div>
 <div class="button-choices">
     <a href="début.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
     <a href="garde.html" class="btn-grad" id="milieu">Avancer vers le garde</a>
-    <a href="cabane.html" class="btn-grad" id="droite">Continuer d'avancer</a>
+    <a href="marécages.html" class="btn-grad" id="droite">Continuer d'avancer</a>
 </div>
 </body>
