--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 <body style="background-image: url('images/welcomeBackground.jpg');">
 <div class="centered-text">
