musique;pendu;curseur / Jeu fini

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Castle quest</title>
     <script src="scripts/script.js"></script>
+    <script src="scripts/musique.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body>
 <div class="centered-text">
     <h1>Bienvenue !</h1>
     <p>Quel est ton nom ?</p>
