--- a/pages/cabane.html
+++ b/pages/cabane.html
@@ -5,21 +5,23 @@
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Cabane</h2>
-<div class="gameText">
-    <h1>Cela semble être une cabane normale...</h1>
-</div>
-<div class="image-centre">
-    <img src="../images/interieur-cabane.jpg" style="margin-left: 185%; margin-top: 10%;">
-    <a href=# class="overlay">
-        <img src="../images/livre.png" alt="Image cliquable" onclick="afficherPopup()">
-    </a>
-</div>
+    <div class="gameText">
+        <h1>Cela semble être une cabane normale...</h1>
+    </div>
+    <div class="image-centre">
+        <img src="../images/interieur-cabane.jpg" style="margin-left: 185%; margin-top: 10%;">
+        <a href=# class="overlay">
+            <img src="../images/livre.png" alt="Image cliquable" onclick="afficherPopup()">
+        </a>
+    </div>
 
-<div class="button-choices">
-    <a href="sentier-droite.html" class="btn-grad" id="gauche">Sortir</a>
-</div>
+    <div class="button-choices">
+        <a href="sentier-droite.html" class="btn-grad" id="gauche">Sortir 🚪</a>
+    </div>
 </body>
 </html>
