--- a/pages/sentier-gauche.html
+++ b/pages/sentier-gauche.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Sentier de gauche</h2>
-<div class="gameText">
-    <h1>Cette porte semble bien gardée</h1>
-</div>
-<div class="image-centre">
-    <img src="../images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
-    <a class="overlay" style="left: 1000px;">
-        <img src="../images/chevalier.png" style="width: 200px;">
-    </a>
-</div>
-<div class="button-choices">
-    <a href="début.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-    <a href="garde.html" class="btn-grad" id="milieu">Avancer vers le garde</a>
-    <a href="marécages.html" class="btn-grad" id="droite">Continuer d'avancer</a>
-</div>
+    <div class="gameText">
+        <h1>Cette porte semble bien gardée</h1>
+    </div>
+    <div class="image-centre">
+        <img src="../images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
+        <a class="overlay" style="left: 1000px;">
+            <img src="../images/chevalier.png" style="width: 200px;">
+        </a>
+    </div>
+    <div class="button-choices">
+        <a href="début.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
+        <a href="garde.html" class="btn-grad" id="milieu">Avancer vers le garde 🗡️</a>
+        <a href="marécages.html" class="btn-grad" id="droite">Continuer d'avancer 🚶‍♂️</a>
+    </div>
 </body>
