--- a/pages/début.html
+++ b/pages/début.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Forêt</h2>
-<div class="gameText">
-    <h1>Ou souhaitez vous aller ?</h1>
-</div>
-<div class="image-centre">
-    <img src="../images/foret-depart.png">
-</div>
-<div class="button-choices">
-    <a href="sentier-gauche.html" class="btn-grad" id="gauche">Sentier de gauche</a>
-    <a href="sentier-droite.html" class="btn-grad" id="droite">Sentier de droite</a>
-</div>
+    <div class="gameText">
+        <h1>Ou souhaitez vous aller ?</h1>
+    </div>
+    <div class="image-centre">
+        <img src="../images/foret-depart.png">
+    </div>
+    <div class="button-choices">
+        <a href="sentier-gauche.html" class="btn-grad" id="gauche">⬅️🏞️Sentier de gauche </a>
+        <a href="sentier-droite.html" class="btn-grad" id="droite">Sentier de droite 🏞️➡️</a>
+    </div>
 </body>
 </html>
