--- a/pages/fin.html
+++ b/pages/fin.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
-<div class="endText">
-    <h1>Félicitation !</h1>
-    <h1>Vous avez terminé le jeu</h1>
-</div>
-<div class="button-choices">
-    <a href="../index.html" class="btn-grad" id="gauche">Recommencer</a>
-</div>
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
+    <div class="endText">
+        <h1>👑 Félicitation !</h1>
+        <h1>Vous avez terminé le jeu</h1>
+    </div>
+    <div class="button-choices">
+        <a href="../index.html" class="btn-grad" id="gauche">🔄 Recommencer</a>
+    </div>
 </body>
