--- a/pages/garde.html
+++ b/pages/garde.html
@@ -5,21 +5,23 @@
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Garde</h2>
-<div class="gameText">
-    <h1>Un code semble nécessaire</h1>
-</div>
-<div class="code-final">
-    <img src="../images/chevalier.png" style="margin-left: 140%; margin-top: 10%;">
-    <div class="input-container">
-        <div id="message" style="color: red;font-family: Bradley Hand, cursive;"></div>
-        <input type="text" class="styled-input" id="codeInput">
-        <button class="btn-grad" id="validerCode">Valider</button>
+    <div class="gameText">
+        <h1>Un code semble nécessaire</h1>
     </div>
-</div>
-<div class="button-choices">
-    <a href="sentier-gauche.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-</div>
+    <div class="code-final">
+        <img src="../images/chevalier.png" style="margin-left: 140%; margin-top: 10%;">
+        <div class="input-container">
+            <div id="message" style="color: red;font-family: Bradley Hand, cursive;"></div>
+            <input type="text" class="styled-input" id="codeInput">
+            <button class="btn-grad" id="validerCode">Valider</button>
+        </div>
+    </div>
+    <div class="button-choices">
+        <a href="sentier-gauche.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
+    </div>
 </body>
