--- a/pages/jeu-marécage.html
+++ b/pages/jeu-marécage.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Marécages</h2>
-<div class="gameText">
-    <h1>Une clé semble se trouver au fond...</h1>
-</div>
-<div class="labyrinthe">
-    <div id="labyrinth">
-        <div class="goal"></div>
-        <div id="player"></div>
+    <div class="gameText">
+        <h1>Une clé semble se trouver au fond...</h1>
     </div>
-</div>
-<script src="../scripts/labyrinthe.js"></script>
-<div class="button-choices">
-    <a href="marécages.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-</div>
+    <div class="labyrinthe">
+        <div id="labyrinth">
+            <div class="goal"></div>
+            <div id="player"></div>
+        </div>
+    </div>
+    <script src="../scripts/labyrinthe.js"></script>
+    <div class="button-choices">
+        <a href="marécages.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
+    </div>
 </body>
