--- a/pages/oiseaux.html
+++ b/pages/oiseaux.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
-    <h2>Sentier de droite</h2>
-<div class="gameText">
-    <h1>Quel était ce bruit ?</h1>
-</div>
-<div class="image-centre">
-    <img src="../images/marécages.jpg" style="margin-left: 115%; margin-top: 10%;">
-</div>
-<div class="button-choices">
-    <a href="sentier-droite.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-    <a href="jeu-oiseaux.html" class="btn-grad" id="droite">Aller voir de plus près</a>
-</div>
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
+        <h2>Sentier de droite</h2>
+    <div class="gameText">
+        <h1>Qui est-ce ?</h1>
+    </div>
+    <div class="image-centre">
+        <img src="../images/table-pendu.jpg" style="margin-left: 140%; margin-top: -10%;">
+    </div>
+    <div class="button-choices">
+        <a href="sentier-droite.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
+        <a href="jeu-oiseaux.html" class="btn-grad" id="droite">Aller voir de plus près ❔</a>
+    </div>
 </body>
 </html>
