--- a/pages/sentier-droite.html
+++ b/pages/sentier-droite.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <title>Castle quest</title>
+    <script src="../scripts/musique.js"></script>
 </head>
-<body style="background-image: url('../images/welcomeBackground.jpg');">
+<body>
+    <button class="btn-grad2" id="msq">Musique ▶️</button>
     <h2>Sentier de droite</h2>
-<div class="gameText">
-    <h1>Une cabane semble se trouver au loin</h1>
-</div>
-<div class="image-centre">
-    <img src="../images/cabane.jpg" style="margin-left: 115%; margin-top: 10%;">
-</div>
-<div class="button-choices">
-    <a href="début.html" class="btn-grad" id="gauche">Retourner sur vos pas</a>
-    <a href="cabane.html" class="btn-grad" id="milieu">Entrer dans la cabane</a>
-    <a href="oiseaux.html" class="btn-grad" id="droite">Continuer d'avancer</a>
-</div>
+    <div class="gameText">
+        <h1>Une cabane semble se trouver au loin</h1>
+    </div>
+    <div class="image-centre">
+        <img src="../images/cabane.jpg" style="margin-left: 115%; margin-top: 10%;">
+    </div>
+    <div class="button-choices">
+        <a href="début.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
+        <a href="cabane.html" class="btn-grad" id="milieu">Entrer dans la cabane 🏚️</a>
+        <a href="oiseaux.html" class="btn-grad" id="droite">Continuer d'avancer 🚶‍♂️</a>
+    </div>
 </body>
 </html>
