--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Castle quest</title>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/musique.js"></script>
 </head>
-<body style="background-image: url('images/welcomeBackground.jpg');">
+<body>
 <div class="centered-text">
     <h1>Bienvenue !</h1>
     <p>Quel est ton nom ?</p>
