--- a/pages/marécages.html
+++ b/pages/marécages.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <button class="btn-grad2" id="msq">Musique ▶️</button>
-        <h2>Sentier de gauche</h2>
     <div class="gameText">
         <h1>Des marécages ?</h1>
     </div>
     <div class="image-centre">
-        <img src="../images/marécages.jpg" style="margin-left: 115%; margin-top: 10%;">
+        <img src="../images/marécages.jpg" alt="Image de marécages" style="margin-left: 100%; margin-top: 30%;">
     </div>
     <div class="button-choices">
         <a href="sentier-gauche.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
