--- a/pages/oiseaux.html
+++ b/pages/oiseaux.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <button class="btn-grad2" id="msq">Musique ▶️</button>
-        <h2>Sentier de droite</h2>
     <div class="gameText">
         <h1>Qui est-ce ?</h1>
     </div>
     <div class="image-centre">
-        <img src="../images/table-pendu.jpg" style="margin-left: 140%; margin-top: -10%;">
+        <img src="../images/table-pendu.jpg" alt="Image d'un sorcier derrière une table" style="margin-left: 120%; margin-top: 30%;">
     </div>
     <div class="button-choices">
         <a href="sentier-droite.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
