--- a/pages/sentier-droite.html
+++ b/pages/sentier-droite.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <button class="btn-grad2" id="msq">Musique ▶️</button>
-    <h2>Sentier de droite</h2>
     <div class="gameText">
         <h1>Une cabane semble se trouver au loin</h1>
     </div>
     <div class="image-centre">
-        <img src="../images/cabane.jpg" style="margin-left: 115%; margin-top: 10%;">
+        <img src="../images/cabane.jpg" alt="Image d'une cabane" style="margin-left: 95%; margin-top: 35%;">
     </div>
     <div class="button-choices">
         <a href="début.html" class="btn-grad" id="gauche">🔙 Retourner sur vos pas</a>
         <a href="cabane.html" class="btn-grad" id="milieu">Entrer dans la cabane 🏚️</a>
-        <a href="oiseaux.html" class="btn-grad" id="droite">Continuer d'avancer 🚶‍♂️</a>
+        <a href="sorcier.html" class="btn-grad" id="droite">Continuer d'avancer 🚶‍♂️</a>
     </div>
 </body>
 </html>
