--- a/pages/sentier-gauche.html
+++ b/pages/sentier-gauche.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <button class="btn-grad2" id="msq">Musique ▶️</button>
-    <h2>Sentier de gauche</h2>
     <div class="gameText">
         <h1>Cette porte semble bien gardée</h1>
     </div>
     <div class="image-centre">
-        <img src="../images/porte chateau.png" style="margin-left: 140%; margin-top: 10%;">
+        <img src="../images/porte chateau.png" alt="Image d'une porte de chateau" style="margin-left: 120%; margin-top: 38%;">
         <a class="overlay" style="left: 1000px;">
-            <img src="../images/chevalier.png" style="width: 200px;">
+            <img src="../images/chevalier.png" alt="Image d'un chevalier" style="border-width: 0px; width: 200px;margin-left: -90%">
         </a>
     </div>
     <div class="button-choices">
